# campo-sagrado-entrelazador

Campo-Sagrado-Entrelazador/: .env      .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  diagnose.py  package-lock.json  package.json  pyproject.toml  setup_professional.sh
Campo-Sagrado-Entrelazador/automation-scripts/: requirements.txt
Campo-Sagrado-Entrelazador/campo-sagrado/: package-lock.json  package.json
Campo-Sagrado-Entrelazador/campo-sagrado/campo-sagrado-interface/: package-lock.json  package.json
Campo-Sagrado-Entrelazador/data/obsidian-vault/00-DASHBOARDS/: Current-Recommendation.md
Campo-Sagrado-Entrelazador/data/obsidian-vault/01-DAILY/: 2025-08-13-Recommendation.md
Campo-Sagrado-Entrelazador/obsidian-dashboard/.obsidian/: workspace.json
Campo-Sagrado-Entrelazador/prisma/: README.md  package.json  schema.prisma  seed.ts
Campo-Sagrado-Entrelazador/src/api/: main.py
Campo-Sagrado-Entrelazador/src/app/: globals.css  page.tsx
Campo-Sagrado-Entrelazador/src/application/services/: RecommendationService.ts
Campo-Sagrado-Entrelazador/src/application/use-cases/: GenerateSacredRecommendation.ts
Campo-Sagrado-Entrelazador/src/core/: matriz-divina.ts  motor-generador.ts  orquestador-armonico.ts  recommendation_engine.py
Campo-Sagrado-Entrelazador/src/domain/entities/: SacredTask.ts
Campo-Sagrado-Entrelazador/src/domain/repositories/: SacredTaskRepository.ts
Campo-Sagrado-Entrelazador/src/domain/value-objects/: EnergyLevel.ts
Campo-Sagrado-Entrelazador/src/interfaces/: dashboard.tsx
Campo-Sagrado-Entrelazador/src/models/: recommendation.py
Campo-Sagrado-Entrelazador/src/presentation/components/: SacredDashboard.tsx
Campo-Sagrado-Entrelazador/src/presentation/components/atoms/: SacredButton.tsx  SacredInput.tsx
Campo-Sagrado-Entrelazador/src/presentation/components/molecules/: EnergySlider.tsx
Campo-Sagrado-Entrelazador/src/services/: ai_service.py  obsidian_exporter.py
Campo-Sagrado-Entrelazador/src/utils/: config.py
